# market-trend-analyzer

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  build.sbt  docker-compose.yml
docker/: docker-compose.dev.yml
docker/configs/db-init/: init_timescaledb.sql
docker/configs/kafka/: create_topics.sh  topics.json
docker/configs/nginx/: nginx.conf
docker/dockerfiles/flink/: Dockerfile
docker/dockerfiles/producer/: Dockerfile
docker/dockerfiles/webapp/: Dockerfile  Dockerfile.prod
docker/dockerfiles/webapp-client/: Dockerfile  Dockerfile.prod
docker/dockerfiles/webapp-server/: Dockerfile  Dockerfile.prod
project/: plugins.sbt
report/: .gitignore  Dockerfile  bibliography.bib  header.tex  index.qmd
report/src/: .gitignore  _quarto.yml  index.qmd
scripts/: start_dev.sh
services/analytics/: README.md
services/analytics/flink_market_analytics/: build.sbt
services/analytics/flink_market_analytics/project/: plugins.sbt
services/flink-python-analytics/: job.py  requirements.txt
services/flink-scala-analytics/: build.sbt
services/kafka-benchmarking/: package-lock.json  package.json
services/kafka-benchmarking/src/: index.js
services/producer/: .dockerignore  Cargo.toml  README.md  build.rs  output.csv  split-csv.py
services/producer/src/: main.rs  message.proto
services/producer/src/financial_tick_source/: csv.rs  mod.rs  trait.rs
services/webapp/: .env  .proxyrc.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
services/webapp/src/client/: App.js  (+1 more)
shared/: message.proto  regions.txt  topics.json
(+28 files in other folders)
