[package]
name = "market-ticks-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
chrono = "0.4.38"
csv = "1.3.0"
futures = "0.3.31"
rdkafka = "0.36.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
